Remove test variable

--- a/addon/data/widgets/price.html
+++ b/addon/data/widgets/price.html
@@ -11,7 +11,7 @@
     </style>
   </head>
   <body>
-    <span id="price">hi</span>
+    <span id="price"></span>
     <script src="jquery-2.0.3.min.js"></script>
     <script>
       $(function () {
